# Benchmark-QC

./: README.md  pyproject.toml
FeS/: FeS-in.ipynb  FeS_PES_H.npz  FeS_pyscf.py
N2/: N2-in.ipynb  N2_PES_H.npz  ham_pyscf.py
U2/: U2-in.ipynb  U2-in1.ipynb  U2_PES_H.npz  U2_ham.py  U2_ham1.py
benchmark_qc.egg-info/: PKG-INFO  SOURCES.txt
docs/: API.md  NPZ_FORMAT.md  README.md  USAGE.md
