[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-qc"
version = "0.1.0"
description = "Benchmark QC Hamiltonians (N2, FeS, U2)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}

authors = [{name = "Benchmark-QC contributors"}]
urls = {homepage = "https://github.com/asthanalab/BenchmarkQC"}
keywords = ["quantum chemistry", "hamiltonian", "benchmark", "pennylane", "pyscf"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy",
  "scipy",
  "pennylane",
  "pyscf",
  "basis_set_exchange",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark_qc*"]
